--- a/polbot-core/src/main/resources/templates/currencyconfig.html
+++ b/polbot-core/src/main/resources/templates/currencyconfig.html
@@ -89,114 +89,77 @@
                             <input id="currencyConfigId" type="hidden"
                                    th:field="*{currencyConfigId}"/>
 
-                            <div class="row">
+                            <div class="form-group">
+                                <label for="inputCurrPair">Currency Pair:</label>
+                                <input id="inputCurrPair" type="text" th:field="*{currencyPair}" class="form-control"
+                                       th:errorclass="fieldError"/>
 
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
-                                        <label th:for="inputCurrPair" th:text="#{currencyconfig.currencyPair} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputCurrPair" type="text" th:field="*{currencyPair}"
-                                                       th:errorclass="fieldError"/>
-
-                                                <br/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
-                                        <label th:for="inputUsableBalancePercent"
-                                               th:text="#{currencyconfig.usableBalancePercent} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputUsableBalancePercent" type="text"
-                                                       th:field="*{usableBalancePercent}"
-                                                       th:errorclass="fieldError"/><br/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
-                                        <label th:for="inputBuyAtPrice" th:text="#{currencyconfig.buyAtPrice} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputBuyAtPrice" type="text" th:field="*{buyAtPrice}"
-                                                       th:errorclass="fieldError"/><br/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
-                                        <label th:for="inputBuyOnPercent" th:text="#{currencyconfig.buyOnPercent} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputBuyOnPercent" type="text" th:field="*{buyOnPercent}"
-                                                       th:errorclass="fieldError"/><br/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
-                                        <label th:for="inputSellAtPrice" th:text="#{currencyconfig.sellAtPrice} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputSellAtPrice" type="text" th:field="*{sellAtPrice}"
-                                                       th:errorclass="fieldError"/><br/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
-                                        <label th:for="inputSellOnPercent" th:text="#{currencyconfig.sellOnPercent} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputSellOnPercent" type="text" th:field="*{sellOnPercent}"
-                                                       th:errorclass="fieldError"/><br/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
-                                        <label th:for="checkboxBuyable" th:text="#{currencyconfig.buyable} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input type="checkbox" id="checkboxBuyable" th:field="*{buyable}"
-                                                       th:errorclass="fieldError"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
-                                        <label th:for="checkboxSellable" th:text="#{currencyconfig.sellable} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input type="checkbox" id="checkboxSellable" th:field="*{sellable}"
-                                                       th:errorclass="fieldError"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                             </div>
+                            <div class="form-group">
+                                <label th:for="inputUsableBalancePercent"
+                                       th:text="#{currencyconfig.usableBalancePercent} "/>
+                                <input id="inputUsableBalancePercent" type="text"
+                                       th:field="*{usableBalancePercent}" class="form-control"
+                                       th:errorclass="fieldError"/>
+
+                            </div>
+
+                            <div class="form-group">
+                                <label th:for="inputBuyAtPrice" th:text="#{currencyconfig.buyAtPrice} "/>
+                                <input id="inputBuyAtPrice" type="text" th:field="*{buyAtPrice}" class="form-control"
+                                       th:errorclass="fieldError"/><br/>
+                            </div>
+                            <div class="form-group">
+                                <label th:for="inputBuyOnPercent" th:text="#{currencyconfig.buyOnPercent} "/>
+
+
+                                        <input id="inputBuyOnPercent" type="text" th:field="*{buyOnPercent}" class="form-control"
+                                               th:errorclass="fieldError"/><br/>
+
+
+                            </div>
+
+                            <div class="form-group">
+                                <label th:for="inputSellAtPrice" th:text="#{currencyconfig.sellAtPrice} "/>
+
+
+                                        <input id="inputSellAtPrice" type="text" th:field="*{sellAtPrice}" class="form-control"
+                                               th:errorclass="fieldError"/><br/>
+
+
+                            </div>
+                            <div class="form-group">
+                                <label th:for="inputSellOnPercent" th:text="#{currencyconfig.sellOnPercent} "/>
+
+
+                                        <input id="inputSellOnPercent" type="text" th:field="*{sellOnPercent}"  class="form-control"
+                                               th:errorclass="fieldError"/><br/>
+
+                            </div>
+
+                            <div class="form-group">
+                                <label th:for="checkboxBuyable" th:text="#{currencyconfig.buyable} "/>
+
+                                        <input type="checkbox" id="checkboxBuyable" th:field="*{buyable}"  class="form-control"
+                                               th:errorclass="fieldError"/>
+
+                            </div>
+
+                            <div class="form-group">
+                                <label th:for="checkboxSellable" th:text="#{currencyconfig.sellable} "/>
+
+
+                                        <input type="checkbox" id="checkboxSellable" th:field="*{sellable}"  class="form-control"
+                                               th:errorclass="fieldError"/>
+
+
+                            </div>
+
                             <div class="row">
 
                                 <div class="submit">
                                     <button type="submit" onclick="return confirm('Want to delete?')"
-                                            class="btn btn-primary btn-primary-group"
+                                            class="btn btn-danger btn-danger-group"
                                             style="float: left"
                                             name="delete" th:text="Sil">Add Seed Starter
                                     </button>
