--- a/polbot-core/src/main/resources/templates/currencyconfig.html
+++ b/polbot-core/src/main/resources/templates/currencyconfig.html
@@ -154,6 +154,15 @@
 
 
                             </div>
+                            <div class="form-group">
+                                <label th:for="inputBuyOrderCancellationHour" th:text="#{currencyconfig.buyOrderCancellationHour} "/>
+
+
+                                <input type="text" id="inputBuyOrderCancellationHour" th:field="*{buyOrderCancellationHour}"  class="form-control"
+                                       th:errorclass="fieldError"/>
+
+
+                            </div>
 
                             <div class="row">
 
