--- a/polbot-core/src/main/resources/templates/currencyconfigforall.html
+++ b/polbot-core/src/main/resources/templates/currencyconfigforall.html
@@ -101,48 +101,36 @@
                                    th:field="*{buyable}"/>
 
 
-                            <div class="row">
 
-                                <div class="col-sm-6 col-lg-4">
                                     <div class="form-group">
                                         <label th:for="inputUsableBalancePercent"
                                                th:text="#{currencyconfig.usableBalancePercent} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputUsableBalancePercent" type="text"
+
+                                                <input id="inputUsableBalancePercent" type="text"        class="form-control"
                                                        th:field="*{usableBalancePercent}"
                                                        th:errorclass="fieldError"/><br/>
-                                            </div>
-                                        </div>
+
+
                                     </div>
-                                </div>
 
 
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
+                            <div class="form-group">
                                         <label th:for="inputBuyOnPercent" th:text="#{currencyconfig.buyOnPercent} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputBuyOnPercent" type="text" th:field="*{buyOnPercent}"
+
+
+                                                <input id="inputBuyOnPercent" type="text" th:field="*{buyOnPercent}"        class="form-control"
                                                        th:errorclass="fieldError"/><br/>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                 </div>
 
 
-
-                                <div class="col-sm-6 col-lg-4">
-                                    <div class="form-group">
+                            <div class="form-group">
                                         <label th:for="inputSellOnPercent" th:text="#{currencyconfig.sellOnPercent} "/>
-                                        <div class="col-md-8">
-                                            <div class="input-group">
-                                                <input id="inputSellOnPercent" type="text" th:field="*{sellOnPercent}"
+
+                                                <input id="inputSellOnPercent" type="text" th:field="*{sellOnPercent}"        class="form-control"
                                                        th:errorclass="fieldError"/><br/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+
+
 
 
                             </div>
