--- a/polbot-core/src/main/resources/templates/openOrders.html
+++ b/polbot-core/src/main/resources/templates/openOrders.html
@@ -106,6 +106,14 @@
                onclick="return confirm('Want to stop buy orders for currencies with too much sell orders?')"
                href="/orders/stopbuyordersforcurrencies">stop buy orders for currencies with too much sell orders</a>
         </div>
+        <div class="col-md-3">
+            <a class="btn btn-info" href="/orders/collectiveOrders">collectiveOrders</a>
+        </div>
+        <div class="col-md-3">
+            <a class="btn btn-info"
+
+               href="/orders/collectiveOrders?getorders=">collectiveOrders</a>
+        </div>
     </div>
 
     <br/>
