balances page added. username login added

--- a/polbot-core/src/main/resources/templates/login.html
+++ b/polbot-core/src/main/resources/templates/login.html
@@ -39,8 +39,8 @@
 
     <form class="form-signin" th:action="@{/login}" method="post">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input id="inputEmail" name="username" class="form-control" placeholder="Email address" required="" autofocus="" type="email" />
+        <label for="inputUname" class="sr-only">User name</label>
+        <input id="inputUname" name="username" class="form-control" placeholder="User name" required="" autofocus="" type="text" />
         <label for="inputPassword" class="sr-only">Password</label>
         <input id="inputPassword" name="password" class="form-control" placeholder="Password" required="" type="password" />
 
