--- a/polbot-core/src/main/resources/templates/allusers.html
+++ b/polbot-core/src/main/resources/templates/allusers.html
@@ -109,20 +109,8 @@
 
 </div>
 <!-- /.container -->
-
 <div class="container">
-
-    <hr/>
-
-    <!-- Footer -->
-    <footer>
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
-            </div>
-        </div>
-    </footer>
-
+    <div th:replace="footer :: footer">&copy; 2016 The Static Templates</div>
 </div>
 <!-- /.container -->
 
