--- a/polbot-core/src/main/resources/templates/collectiveorder.html
+++ b/polbot-core/src/main/resources/templates/collectiveorder.html
@@ -119,25 +119,9 @@
     </form>
 
 </div>
-
-<!-- /.container -->
-
 <div class="container">
-
-    <hr/>
-
-    <!-- Footer -->
-    <footer>
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
-            </div>
-        </div>
-    </footer>
-
+    <div th:replace="footer :: footer">&copy; 2016 The Static Templates</div>
 </div>
-<!-- /.container -->
-
 <!-- jQuery -->
 <script src="../js/jquery.js"></script>
 <script src="../js/mustache.min.js"></script>
