--- a/polbot-core/src/main/resources/templates/edituserinfo.html
+++ b/polbot-core/src/main/resources/templates/edituserinfo.html
@@ -24,6 +24,14 @@
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- jQuery -->
+    <script src="../js/jquery.js"></script>
+    <script src="../js/mustache.min.js"></script>
+    <script src="../js/polBotScript.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../js/bootstrap.min.js"></script>
+
+
 </head>
 
 <body>
@@ -88,19 +96,13 @@
         </div>
         <div class="form-group">
             <label for="inputuserName"> User Name:</label>
-            <input id="inputuserName" class="form-control" type="text" th:field="*{userName}"
+            <input id="inputuserName" th:contenteditable="false" class="form-control" type="text" th:field="*{userName}"
                    th:errorclass="fieldError"/>
 
         </div>
         <div class="form-group">
             <label for="inputpassword"> Password:</label>
             <input id="inputpassword" class="form-control" type="text" th:field="*{password}"
-                   th:errorclass="fieldError"/>
-
-        </div>
-        <div class="form-group">
-            <label for="inputrole"> Role:</label>
-            <input id="inputrole" class="form-control" type="text" th:field="*{role}"
                    th:errorclass="fieldError"/>
 
         </div>
@@ -123,30 +125,9 @@
 
 </div>
 
-<!-- /.container -->
-
 <div class="container">
-
-    <hr/>
-
-    <!-- Footer -->
-    <footer>
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
-            </div>
-        </div>
-    </footer>
-
+    <div th:replace="footer :: footer">&copy; 2016 The Static Templates</div>
 </div>
-<!-- /.container -->
-
-<!-- jQuery -->
-<script src="../js/jquery.js"></script>
-<script src="../js/mustache.min.js"></script>
-<script src="../js/polBotScript.js"></script>
-<!-- Bootstrap Core JavaScript -->
-<script src="../js/bootstrap.min.js"></script>
 
 </body>
 
