--- a/polbot-core/src/main/resources/templates/index.html
+++ b/polbot-core/src/main/resources/templates/index.html
@@ -91,11 +91,13 @@
                     <hr/>
 
                     <div class="row">
+
                         <div class="col-md-12">
                             <div class="panel panel-default">
-                                <div class="panel-body">
 
-                                    <table id="ctable" class="table table-responsive">
+                                <div class="panel-body">
+                                    <p th:text="${'last updated at '+#dates.format(poloniexTickerPack.lastTickerMapDate, 'dd-MMM-yyyy HH:mm:ss')}"></p>
+                                    <table id="ctable" class="table table-responsive table-striped table-bordered">
                                         <thead>
                                         <tr>
                                             <th>Currency</th>
@@ -106,7 +108,7 @@
                                         </thead>
 
                                         <tbody>
-                                        <tr th:each="ticker : ${poloniexTickers}">
+                                        <tr th:each="ticker : ${poloniexTickerPack.tickerMap}">
                                             <td th:text="${ticker.key}">ETH</td>
                                             <td th:text="${ticker.value.lowestAsk}">0.041</td>
                                             <td th:text="${ticker.value.highestBid}">0.042</td>
@@ -128,23 +130,9 @@
 
 </div>
 <!-- /.container -->
-
 <div class="container">
-
-    <hr/>
-
-    <!-- Footer -->
-    <footer>
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
-            </div>
-        </div>
-    </footer>
-
+    <div th:replace="footer :: footer">&copy; 2016 The Static Templates</div>
 </div>
-<!-- /.container -->
-
 
 </body>
 
