--- a/polbot-core/src/main/resources/templates/openOrders.html
+++ b/polbot-core/src/main/resources/templates/openOrders.html
@@ -167,22 +167,9 @@
 
 
 <!-- /.container -->
-
 <div class="container">
-
-    <hr/>
-
-    <!-- Footer -->
-    <footer>
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
-            </div>
-        </div>
-    </footer>
-
+    <div th:replace="footer :: footer">&copy; 2016 The Static Templates</div>
 </div>
-<!-- /.container -->
 
 <!-- jQuery -->
 <script src="../js/jquery.js"></script>
