--- a/polbot-core/src/main/resources/templates/collectiveorder.html
+++ b/polbot-core/src/main/resources/templates/collectiveorder.html
@@ -95,7 +95,7 @@
 
         </div>
         <div class="form-group">
-            <label for="inputpricePercentSplitter"> priceSplitter:</label>
+            <label for="inputpricePercentSplitter"> pricePercentSplitter:</label>
             <input id="inputpricePercentSplitter" class="form-control" type="text" th:field="*{pricePercentSplitter}"
                    th:errorclass="fieldError"/>
 
