edituserinfo.html username readonly

--- a/polbot-core/src/main/resources/templates/edituserinfo.html
+++ b/polbot-core/src/main/resources/templates/edituserinfo.html
@@ -96,7 +96,7 @@
         </div>
         <div class="form-group">
             <label for="inputuserName"> User Name:</label>
-            <input id="inputuserName" th:contenteditable="false" class="form-control" type="text" th:field="*{userName}"
+            <input id="inputuserName" readonly="readonly" class="form-control" type="text" th:field="*{userName}"
                    th:errorclass="fieldError"/>
 
         </div>
