Major Changes multiple accounts support added. bot selection page added

--- a/polbot-core/src/main/resources/templates/currencyconfig.html
+++ b/polbot-core/src/main/resources/templates/currencyconfig.html
@@ -83,8 +83,8 @@
 
                         <form action="#" th:action="@{/currencyconfig}" th:object="${currencyConfig}" method="post">
 
-                            <input id="userId" type="hidden"
-                                   th:field="*{userId}"/>
+                            <input id="botUser" type="hidden"
+                                   th:field="*{botUser}"/>
 
                             <input id="currencyConfigId" type="hidden"
                                    th:field="*{currencyConfigId}"/>
