coindesk api to registry ticker map reduced to btc only balances table rise fall format

--- a/polbot-core/src/main/resources/static/css/shop-item.css
+++ b/polbot-core/src/main/resources/static/css/shop-item.css
@@ -31,10 +31,12 @@ footer {
     margin: 50px 0;
 }
 
-rising{
+.rising{
     color:green;
+    font-weight: bold;
 }
 
-falling{
+.falling{
     color:red;
+    font-weight: bold;
 }
